# shinier

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: module.py
src/shinier/: __main__.py  args.py  graph.py  logging.py  params.py  reflect.py
tests/: test_args.py  test_graph.py  test_params.py
