[build-system]
requires = ["hatchling==1.24.2"]
build-backend = "hatchling.build"

[project]
name = "shinier"
description = "Keep your code shiny with shinier! Write the code that solves your problem, and let shinier take care of the rest."
readme = "README.md"
dynamic = ["version"]
dependencies = ["pydantic>=2,<3"]

[tool.hatch.version]
path = "src/shinier/__version__.py"

[tool.hatch.envs.default]
python = "3.12"
path = ".virtualenvs/default"

[tool.hatch.envs.dev]
python = "3.12"
dependencies = ["ruff==0.4.1", "pytest==8.1.1", "pytest-cov==5.0.0", "coverage[toml]==7.5.0"]
path = ".venv"

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = [
    "src/",
    "tests/",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
skip_empty = true
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
addopts = "--cov"