[build-system]
requires = ["hatchling==1.24.2"]
build-backend = "hatchling.build"

[project]
name = "shinier"
description = "Keep your code shiny with shinier! Write the code that solves your problem, and let shinier take care of the rest."
readme = "README.md"
dynamic = ["version"]
dependencies = ["pydantic>=2,<3", "rich>=13,<14", "pluggy>=1,<2"]

[project.optional-dependencies]
dev = ["ruff==0.4.1", "pytest==8.1.1", "pytest-cov==5.0.0", "coverage[toml]==7.5.0"]
uv = ["uv==0.1.38"]

[project.scripts]
shinier = "shinier.__main__:main"

[tool.hatch.version]
path = "src/shinier/__version__.py"

[tool.hatch.envs.default]
python = "3.12"
path = ".virtualenvs/default"

[tool.hatch.envs.dev]
python = "3.12"
features = ["dev", "uv"]
path = ".venv"

[tool.hatch.envs.default-compiled]
python = "3.12"
features = ["uv"]
path = ".virtualenvs/default-compiled"
detached = true
scripts.uv-pip-install = [
    "uv pip install --requirement requirements.txt",
    "uv pip install --no-deps --editable ."
]

[tool.hatch.envs.dev-compiled]
python = "3.12"
features = ["uv"]
path = ".virtualenvs/dev-compiled"
detached = true
scripts.uv-pip-install = [
    "uv pip install --requirement dev-requirements.txt",
    "uv pip install --no-deps --editable ."
]

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = [
    "src/",
    "tests/",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
skip_empty = true
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
addopts = "--cov -vvv"